examples/test/testpolicy13550.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13550
  namespace: namespace115
spec:
  podSelector:
    matchLabels:
      key19: value9
      key11: value0
      key37: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value39
      podSelector:
        matchLabels:
          key27: value37
          key3: value3
